--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -61,11 +61,11 @@
 	            <!-- /.navbar-header -->
 
 	            <ul class="nav navbar-top-links navbar-right">
-	                <li class="dropdown">
+	                <li class="dropdown" style="display:none;">
 	                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
 	                        <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
 	                    </a>
-	                    <ul class="dropdown-menu dropdown-messages">
+	                    <ul class="dropdown-menu dropdown-messages" style="display:none;">
 	                        <li>
 	                            <a href="#">
 	                                <div>
@@ -112,11 +112,11 @@
 	                    <!-- /.dropdown-messages -->
 	                </li>
 	                <!-- /.dropdown -->
-	                <li class="dropdown">
+	                <li class="dropdown" style="display:none;">
 	                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
 	                        <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
 	                    </a>
-	                    <ul class="dropdown-menu dropdown-tasks">
+	                    <ul class="dropdown-menu dropdown-tasks" style="display:none;">
 	                        <li>
 	                            <a href="#">
 	                                <div>
@@ -191,11 +191,11 @@
 	                    <!-- /.dropdown-tasks -->
 	                </li>
 	                <!-- /.dropdown -->
-	                <li class="dropdown">
+	                <li class="dropdown" style="display:none;">
 	                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
 	                        <i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
 	                    </a>
-	                    <ul class="dropdown-menu dropdown-alerts">
+	                    <ul class="dropdown-menu dropdown-alerts" style="display:none;">
 	                        <li>
 	                            <a href="#">
 	                                <div>
@@ -256,13 +256,7 @@
 	                        <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
 	                    </a>
 	                    <ul class="dropdown-menu dropdown-user">
-	                        <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-	                        </li>
-	                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-	                        </li>
-	                        <li class="divider"></li>
-	                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-	                        </li>
+	                        <li><a href="/admin/complete_logoff"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
 	                    </ul>
 	                    <!-- /.dropdown-user -->
 	                </li>
