--- a/app/views/pos/_cash_register.html.erb
+++ b/app/views/pos/_cash_register.html.erb
@@ -14,9 +14,9 @@
 	<table class="line_items">
 		 <tr style="background-color:#ddd;">
 			<td class="line_heading"><strong>PRODUCT NAME:</strong></td>
-			<td class="line_heading"><strong>SKU:</strong></td>
-			<td class="line_heading" width="110"><strong>PRICE:</strong></td>
-			<td class="line_heading" style="width:130px;"><strong>QTY:</strong></td>
+			<td class="line_heading hidden-sm hidden-xs"><strong>SKU:</strong></td>
+			<td class="line_heading" style="max-width:110px;"><strong>PRICE:</strong></td>
+			<td class="line_heading" style="max-width:130px;"><strong>QTY:</strong></td>
 			<td class="line_heading"><strong>TOTAL:</strong></td>
 			<td class="line_heading" width="95">&nbsp;</td>
 		</tr>
