--- a/app/views/pos/_cash_register_right.html.erb
+++ b/app/views/pos/_cash_register_right.html.erb
@@ -93,7 +93,7 @@
 			<div class="right_box">
 				<div class="right_box_padding">
 					<form onsubmit="return false;" class="noSubmitForm">
-						<div class="input-group">
+						<div class="input-group" style="margin:0;">
 						  <input type="text" name="couponId" id="couponId" class="form-control" placeholder="Enter Coupon Code" />
 					      <span class="input-group-btn">
 					        <button name="commit" type="submit" class="btn btn-go" type="button" onclick="addCoupon();">Add</button>
