--- a/app/views/pos/_login.html.erb
+++ b/app/views/pos/_login.html.erb
@@ -1,5 +1,5 @@
 <!-- Login Page -->
-<div class="container" id="login-wrapper">
+<div class="container hideOnReceipt login-options" id="login-wrapper">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <div class="login-panel panel panel-default">
@@ -33,14 +33,14 @@
     </div>
 </div>
 <!-- Select Store -->
-<div class="container" id="select-store-wrapper">
+<div class="container hideOnReceipt login-options" id="select-store-wrapper">
     <div class="row">
         <h1>Select A Store</h1>
         <div class="row" id="store-data"></div>
 	</div>
 </div>
 <!-- Select Register -->
-<div class="container" id="select_register_wrapper" style="padding-bottom:40px;">
+<div class="container hideOnReceipt login-options" id="select_register_wrapper" style="padding-bottom:40px;">
 	<div class="row">
 		<h1>Select A Register</h1>
 		<div style="display:table;width:100%;">
