--- a/app/views/pos/_options.html.erb
+++ b/app/views/pos/_options.html.erb
@@ -1,6 +1,6 @@
 <div class="row" style="display:none;">
 	<div class="col-sm-4">
-		<a href="/login/log_off_store" class="btn btn-wide btn-primary">Logout Of Store</a>
+		<a onclick="logOffStore()" class="btn btn-wide btn-primary">Logout Of Store</a>
 		<strong>This Action Does:</strong><br>
 			- Logoff this device from the register<br>
 			- Logoff this device from the store<br><br>
@@ -55,7 +55,7 @@
 <table class="register_options_table" cellspacing="0" cellpadding="20">
 	<tr>
 		<td style="width:29%;padding:2%;vertical-align:top;">
-			<a href="/login/log_off_store" class="btn btn-wide btn-primary">Logout Of Store</a><br>
+			<a onclick="logOffStore()" class="btn btn-wide btn-primary">Logout Of Store</a><br>
 			<strong>This Action Does:</strong><br>
 				- Logoff this device from the register<br>
 				- Logoff this device from the store<br><br>
